# Deep-Neural-Network-From-Scatch

./: .gitignore  Deep_neural_nets_from_scratch.ipynb  Deep_neural_network_from_scratch.ipynb  Implementing_Deep_neural_nets_from_scratch_using_numpy.ipynb  README.md  pyproject.toml
